# AI-Code-Review-System

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_end_to_end_demo.sh  start_dev.sh  update_webhook.py
cli/: chunker.py  client.py  diff_parser.py  git_utils.py  github_integration.py  main.py  prompt_builder.py
core/: git_diff_parser.py  pr_diff_parser.py  report_generator.py  static_analysis.py
data/: cache.json
dataset/: generate_dataset.py
evaluation/: benchmark.py  dataset.json  evaluator.py  metrics.py
integrations/: github_bot.py
scripts/: preflight_check.py
server/: app.py  cache.py  ensemble.py  gpu_worker.py  llm_engine.py  model_loader.py  rag.py  review_queue.py  reviewer.py
tests/: test_github_webhook.py  test_server_review.py
